updated workflow to point to new app

--- a/.github/workflows/main_oceans.yml
+++ b/.github/workflows/main_oceans.yml
@@ -58,6 +58,6 @@ jobs:
         uses: azure/webapps-deploy@v2
         id: deploy-to-webapp
         with:
-          app-name: 'oceans'
+          app-name: 'oceans-app'
           slot-name: 'Production'
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_054332CB92324653BFE7E373B94A9335 }}
